tests/syntax_errors/sasha14_2.tl
-- test case 14.
-- Description : expression error

-- Expected : '2'
require "ifj21" 
 function funnnn()AAAAA_ERRORRR() +++ lol end 
